force-app/main/default/objects/Obra__c/Obra__c.object-meta.xml
<CustomObject>
    <label>Obra</label>
    <nameField>
        <label>Nombre de la Obra</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Obra</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>