force-app/main/default/objects/Obra__c/fields/Bodega__c.field-meta.xml
<CustomField>
    <fullName>Bodega__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Bodega Despacho</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Compania__c</field>
            <operation>equals</operation>
            <valueField>bodega__c.compania__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>bodega__c</referenceTo>
    <relationshipLabel>Obra</relationshipLabel>
    <relationshipName>Obra</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>