force-app/main/default/objects/Obra__c/fields/Ciudadname__c.field-meta.xml
<CustomField>
    <fullName>Ciudadname__c</fullName>
    <label>Ciudadname</label>
    <length>30</length>
    <type>Text</type>
</CustomField>