force-app/main/default/objects/Obra__c/fields/CodigoObra__c.field-meta.xml
<CustomField>
    <fullName>CodigoObra__c</fullName>
    <label>Código de Obra</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>