force-app/main/default/objects/Obra__c/fields/CodigoObras__c.field-meta.xml
<CustomField>
    <fullName>CodigoObras__c</fullName>
    <label>Código de Obra</label>
    <length>80</length>
    <type>Text</type>
</CustomField>