force-app/main/default/objects/Obra__c/fields/Compania__c.field-meta.xml
<CustomField>
    <fullName>Compania__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compañía</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR (3)</booleanFilter>
        <filterItems>
            <field>compania__c.codigoCompania__c</field>
            <operation>equals</operation>
            <valueField>$User.codigoCompania__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>notEqual</operation>
            <value>System Administrator</value>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>compania__c</referenceTo>
    <relationshipLabel>Obra</relationshipLabel>
    <relationshipName>Obra</relationshipName>
    <type>Lookup</type>
</CustomField>