force-app/main/default/objects/Obra__c/fields/CurrentLocation__c.field-meta.xml
<CustomField>
    <fullName>CurrentLocation__c</fullName>
    <label>Ubicación actual</label>
    <scale>10</scale>
    <type>Location</type>
</CustomField>