force-app/main/default/objects/Obra__c/fields/DetalleObra__c.field-meta.xml
<CustomField>
    <fullName>DetalleObra__c</fullName>
    <label>Detalle de la Obra</label>
    <length>255</length>
    <type>Text</type>
</CustomField>