force-app/main/default/objects/Obra__c/fields/DireccionDetallada__c.field-meta.xml
<CustomField>
    <fullName>DireccionDetallada__c</fullName>
    <label>Dirección Detallada</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>