force-app/main/default/objects/Obra__c/fields/direccionGeorreferenciada__c.field-meta.xml
<CustomField>
    <fullName>direccionGeorreferenciada__c</fullName>
    <label>Geolocalización</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>