force-app/main/default/objects/Obra__c/fields/EstadoObra__c.field-meta.xml
<CustomField>
    <fullName>EstadoObra__c</fullName>
    <label>Estado de la Obra</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Levantamiento / Validación de Información</fullName>
                <default>true</default>
                <label>Levantamiento / Validación de Información</label>
            </value>
            <value>
                <fullName>Detección</fullName>
            </value>
            <value>
                <fullName>Estimación</fullName>
            </value>
            <value>
                <fullName>En Proceso</fullName>
            </value>
            <value>
                <fullName>Ejecutada</fullName>
            </value>
            <value>
                <fullName>Cancelada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>