force-app/main/default/objects/Obra__c/fields/EtapaProyecto__c.field-meta.xml
<CustomField>
    <fullName>EtapaProyecto__c</fullName>
    <label>Etapa del proyecto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Movimiento de tierra</fullName>
            </value>
            <value>
                <fullName>Cimentaciones</fullName>
            </value>
            <value>
                <fullName>Estructura</fullName>
            </value>
            <value>
                <fullName>Mampostería</fullName>
            </value>
            <value>
                <fullName>Enlucido</fullName>
            </value>
            <value>
                <fullName>Enchapado</fullName>
            </value>
            <value>
                <fullName>Nivelación de piso</fullName>
            </value>
            <value>
                <fullName>Empaste</fullName>
            </value>
            <value>
                <fullName>Revestimientos</fullName>
            </value>
            <value>
                <fullName>Remodelación/reparación</fullName>
            </value>
            <value>
                <fullName>Impermeabilización</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>