force-app/main/default/objects/Obra__c/fields/FechaFin__c.field-meta.xml
<CustomField>
    <fullName>FechaFin__c</fullName>
    <label>Fecha de Fin</label>
    <required>true</required>
    <type>Date</type>
</CustomField>