force-app/main/default/objects/Obra__c/fields/FechaInicio__c.field-meta.xml
<CustomField>
    <fullName>FechaInicio__c</fullName>
    <label>Fecha de Inicio</label>
    <required>true</required>
    <type>Date</type>
</CustomField>