force-app/main/default/objects/Obra__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Obra</relationshipLabel>
    <relationshipName>Obra</relationshipName>
    <type>Lookup</type>
</CustomField>