force-app/main/default/objects/Obra__c/fields/M2Construccion__c.field-meta.xml
<CustomField>
    <fullName>M2Construccion__c</fullName>
    <inlineHelpText>Debe ingresar solo valores numéricos</inlineHelpText>
    <label>M2 de Construcción</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>