force-app/main/default/objects/Obra__c/fields/M2Pared__c.field-meta.xml
<CustomField>
    <fullName>M2Pared__c</fullName>
    <label>M2 de Pared</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>