force-app/main/default/objects/Obra__c/fields/M2Piso__c.field-meta.xml
<CustomField>
    <fullName>M2Piso__c</fullName>
    <inlineHelpText>Debe ingresar solo valores numéricos</inlineHelpText>
    <label>M2 de Piso</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>