force-app/main/default/objects/Obra__c/fields/Moneda__c.field-meta.xml
<CustomField>
    <fullName>Moneda__c</fullName>
    <label>Moneda</label>
    <length>80</length>
    <type>Text</type>
</CustomField>