force-app/main/default/objects/Obra__c/fields/nueva_constructora__c.field-meta.xml
<CustomField>
    <fullName>nueva_constructora__c</fullName>
    <label>nueva constructora</label>
    <length>120</length>
    <type>Text</type>
</CustomField>