force-app/main/default/objects/Obra__c/fields/ObservacionesGenerales__c.field-meta.xml
<CustomField>
    <fullName>ObservacionesGenerales__c</fullName>
    <label>Observaciones Generales</label>
    <length>255</length>
    <type>Text</type>
</CustomField>