force-app/main/default/objects/Obra__c/fields/OrigenObra__c.field-meta.xml
<CustomField>
    <fullName>OrigenObra__c</fullName>
    <label>Origen de obra</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Llamada</fullName>
            </value>
            <value>
                <fullName>Inspección de zona</fullName>
            </value>
            <value>
                <fullName>Correo electrónico</fullName>
            </value>
            <value>
                <fullName>Visita</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>