force-app/main/default/objects/Obra__c/fields/Pais__c.field-meta.xml
<CustomField>
    <fullName>Pais__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Pais</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR (3)</booleanFilter>
        <filterItems>
            <field>$User.codigoCompania__c</field>
            <operation>equals</operation>
            <valueField>udcDetallada__c.CompanyCode__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>notEqual</operation>
            <value>System Administrator</value>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>udcDetallada__c</referenceTo>
    <relationshipLabel>Obra (Pais)</relationshipLabel>
    <relationshipName>Obras</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>