force-app/main/default/objects/Obra__c/fields/ParticipacionVentas__c.field-meta.xml
<CustomField>
    <fullName>ParticipacionVentas__c</fullName>
    <formula>( VentasDirectas__c  +  VentasIndirectas__c  +  VentasReferenciales__c )  /  ( PotencialEstimadoVenta__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Participación de Ventas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>