force-app/main/default/objects/Obra__c/fields/Potencial_semaforo__c.field-meta.xml
<CustomField>
    <fullName>Potencial_semaforo__c</fullName>
    <label>Potencial</label>
    <length>6</length>
    <type>Text</type>
</CustomField>