force-app/main/default/objects/Obra__c/fields/PotencialEstimadoVenta__c.field-meta.xml
<CustomField>
    <fullName>PotencialEstimadoVenta__c</fullName>
    <inlineHelpText>Colocar sólo valores numéricos</inlineHelpText>
    <label>Potencial Estimado de Venta</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>