force-app/main/default/objects/Obra__c/fields/PotencialVenta__c.field-meta.xml
<CustomField>
    <fullName>PotencialVenta__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Este campo se calcula del potencial de ventas</inlineHelpText>
    <label>Potencial de Venta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>