force-app/main/default/objects/Obra__c/fields/PotencialVentaInicial__c.field-meta.xml
<CustomField>
    <fullName>PotencialVentaInicial__c</fullName>
    <label>Potencial de Venta Inicial</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>