force-app/main/default/objects/Obra__c/fields/provincianame__c.field-meta.xml
<CustomField>
    <fullName>provincianame__c</fullName>
    <label>provincianame</label>
    <length>30</length>
    <type>Text</type>
</CustomField>