force-app/main/default/objects/Obra__c/fields/PruebaConstructora__c.field-meta.xml
<CustomField>
    <fullName>PruebaConstructora__c</fullName>
    <formula>MID(DetalleObra__c, FIND(&quot;-&quot;, DetalleObra__c) + 1, LEN(DetalleObra__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PruebaConstructora</label>
    <type>Text</type>
</CustomField>