force-app/main/default/objects/Obra__c/fields/pruebapropietario__c.field-meta.xml
<CustomField>
    <fullName>pruebapropietario__c</fullName>
    <formula>LEFT(DetalleObra__c, FIND(&quot;-&quot;, DetalleObra__c) - 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>pruebapropietario</label>
    <type>Text</type>
</CustomField>