force-app/main/default/objects/Obra__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>01/11</inlineHelpText>
    <label>Región</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2 AND 5) OR (1 AND 3 AND 4 AND 5)</booleanFilter>
        <filterItems>
            <field>udcDetallada__c.codigoUDC__c</field>
            <operation>equals</operation>
            <value>01/11</value>
        </filterItems>
        <filterItems>
            <field>udcDetallada__c.tipoUDC__r.compania__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>udcDetallada__c.tipoUDC__r.compania__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>udcDetallada__c.tipoUDC__r.corporativa__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>udcDetallada__c.tipoUDC__r.ambitoUDC__c</field>
            <operation>equals</operation>
            <value>Clientes</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>udcDetallada__c</referenceTo>
    <relationshipLabel>Obra (Región)</relationshipLabel>
    <relationshipName>Obras1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>