force-app/main/default/objects/Obra__c/fields/Regionname__c.field-meta.xml
<CustomField>
    <fullName>Regionname__c</fullName>
    <label>Regionname</label>
    <length>20</length>
    <type>Text</type>
</CustomField>