force-app/main/default/objects/Obra__c/fields/RegistroManualVentas__c.field-meta.xml
<CustomField>
    <fullName>RegistroManualVentas__c</fullName>
    <label>Registro Manual de Ventas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>