force-app/main/default/objects/Obra__c/fields/Ruta__c.field-meta.xml
<CustomField>
    <fullName>Ruta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ruta</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Compania__c</field>
            <operation>equals</operation>
            <valueField>ruta__c.compania__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ruta__c</referenceTo>
    <relationshipLabel>Obra</relationshipLabel>
    <relationshipName>Obra</relationshipName>
    <type>Lookup</type>
</CustomField>