force-app/main/default/objects/Obra__c/fields/SistemaConstructivo__c.field-meta.xml
<CustomField>
    <fullName>SistemaConstructivo__c</fullName>
    <label>Sistema Constructivo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tradicional losas de hormigón / paredes mampostería</fullName>
            </value>
            <value>
                <fullName>Liviano losas de hormigón / paredes secas</fullName>
            </value>
            <value>
                <fullName>Sistema de muros de hormigón armado</fullName>
            </value>
            <value>
                <fullName>Sistema de acero estructural / losa steel panel</fullName>
            </value>
            <value>
                <fullName>Sistema mixto hormigón - acero</fullName>
            </value>
            <value>
                <fullName>Sistema de mampostería reforzada</fullName>
            </value>
            <value>
                <fullName>Sistema de Hormi2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>