force-app/main/default/objects/Obra__c/fields/TipoConstruccion__c.field-meta.xml
<CustomField>
    <fullName>TipoConstruccion__c</fullName>
    <label>Tipo de Construcción</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nueva</fullName>
            </value>
            <value>
                <fullName>Mantenimiento</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>