force-app/main/default/objects/Obra__c/fields/TipoObra__c.field-meta.xml
<CustomField>
    <fullName>TipoObra__c</fullName>
    <label>Tipo de Obra</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Residencia</fullName>
            </value>
            <value>
                <fullName>Comercial</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Infraestructura</fullName>
            </value>
            <value>
                <fullName>Edificio</fullName>
            </value>
            <value>
                <fullName>Conjunto</fullName>
            </value>
            <value>
                <fullName>Unidad Educativa</fullName>
            </value>
            <value>
                <fullName>Centro Comercial</fullName>
            </value>
            <value>
                <fullName>Local Comercial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>