force-app/main/default/objects/Obra__c/fields/TipoObraEdificacion__c.field-meta.xml
<CustomField>
    <fullName>TipoObraEdificacion__c</fullName>
    <label>Tipo de Obra/Edificación</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Residencial</fullName>
            </value>
            <value>
                <fullName>Comercial</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Infraestructura</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>