force-app/main/default/objects/Obra__c/fields/UnidadNegocioIngreso__c.field-meta.xml
<CustomField>
    <fullName>UnidadNegocioIngreso__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unidad de negocio de ingreso</label>
    <referenceTo>unidadNegocioIngreso__c</referenceTo>
    <relationshipName>Obras</relationshipName>
    <type>Lookup</type>
</CustomField>