force-app/main/default/objects/Obra__c/fields/UsuarioValidador__c.field-meta.xml
<CustomField>
    <fullName>UsuarioValidador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usuario Validador</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Obras</relationshipName>
    <type>Lookup</type>
</CustomField>