force-app/main/default/objects/Obra__c/fields/VentasDirectas__c.field-meta.xml
<CustomField>
    <fullName>VentasDirectas__c</fullName>
    <label>Ventas Directas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>