force-app/main/default/objects/Obra__c/fields/VentasIndirectas__c.field-meta.xml
<CustomField>
    <fullName>VentasIndirectas__c</fullName>
    <label>Ventas Indirectas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>