force-app/main/default/objects/Obra__c/fields/VentasReferenciales__c.field-meta.xml
<CustomField>
    <fullName>VentasReferenciales__c</fullName>
    <formula>CodigoObra__c  +  direccionGeorreferenciada__Latitude__s</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ventas Referenciales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>