force-app/main/default/objects/Obra__c/fields/Viene_de_zapier__c.field-meta.xml
<CustomField>
    <fullName>Viene_de_zapier__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Viene de zapier</label>
    <type>Checkbox</type>
</CustomField>