force-app/main/default/objects/Obra__c/validationRules/CampoNoEditableCompania.validationRule-meta.xml
<ValidationRule>
    <fullName>CampoNoEditableCompania</fullName>
    <active>true</active>
    <description>Campo Compañia no puede editarse, luego de crear el registro.</description>
    <errorConditionFormula>AND(
NOT(ISNEW()),
PRIORVALUE(Compania__c ) &lt;&gt; Compania__c
)</errorConditionFormula>
    <errorDisplayField>Compania__c</errorDisplayField>
    <errorMessage>El campo no puede ser editable, luego de crear el registro</errorMessage>
</ValidationRule>