force-app/main/default/objects/Obra__c/validationRules/CampoNoEditableUsuarioValidador.validationRule-meta.xml
<ValidationRule>
    <fullName>CampoNoEditableUsuarioValidador</fullName>
    <active>true</active>
    <description>Campo Usuario Validador no puede editarse, luego de crear el registro.</description>
    <errorConditionFormula>AND(
NOT(ISNEW()),
PRIORVALUE(UsuarioValidador__c )  &lt;&gt; UsuarioValidador__c 
)</errorConditionFormula>
    <errorDisplayField>UsuarioValidador__c</errorDisplayField>
    <errorMessage>El campo no puede ser editable, luego de crear el registro</errorMessage>
</ValidationRule>