force-app/main/default/objects/Obra__c/validationRules/CampoNoEditableVentasIndirectas.validationRule-meta.xml
<ValidationRule>
    <fullName>CampoNoEditableVentasIndirectas</fullName>
    <active>true</active>
    <description>El Campo Ventas Directas no puede editarse, luego de crear el registro.</description>
    <errorConditionFormula>AND(
NOT(ISNEW()),
PRIORVALUE(   VentasIndirectas__c    ) &lt;&gt; VentasIndirectas__c
)</errorConditionFormula>
    <errorDisplayField>VentasIndirectas__c</errorDisplayField>
    <errorMessage>El campo no puede ser editable, cuando ya tiene un valor existente</errorMessage>
</ValidationRule>