force-app/main/default/objects/Obra__c/validationRules/CamposNoEditableVentasDirectas.validationRule-meta.xml
<ValidationRule>
    <fullName>CamposNoEditableVentasDirectas</fullName>
    <active>true</active>
    <description>El Campo Ventas Directas no puede editarse, luego de crear el registro.</description>
    <errorConditionFormula>AND(
NOT(ISNEW()),
PRIORVALUE(  VentasDirectas__c   ) &lt;&gt; VentasDirectas__c
)</errorConditionFormula>
    <errorDisplayField>VentasDirectas__c</errorDisplayField>
    <errorMessage>El campo no puede ser editable, cuando ya tiene un valor existente</errorMessage>
</ValidationRule>