force-app/main/default/objects/Obra__c/validationRules/CamposNoEditableVentasReferencial.validationRule-meta.xml
<ValidationRule>
    <fullName>CamposNoEditableVentasReferencial</fullName>
    <active>true</active>
    <description>El Campo Ventas Directas no puede editarse, luego de crear el registro.</description>
    <errorConditionFormula>AND(
NOT(ISNEW()),
PRIORVALUE(   VentasReferenciales__c    ) &lt;&gt; VentasReferenciales__c
)</errorConditionFormula>
    <errorDisplayField>VentasReferenciales__c</errorDisplayField>
    <errorMessage>El campo no puede ser editable, cuando ya tiene un valor existente</errorMessage>
</ValidationRule>