force-app/main/default/objects/Obra__c/validationRules/EstadoInvalidoCancelada.validationRule-meta.xml
<ValidationRule>
    <fullName>EstadoInvalidoCancelada</fullName>
    <active>true</active>
    <description>Regla de validación que impide el cambio de estado inválido para el valor Cancelada.</description>
    <errorConditionFormula>AND(
ISPICKVAL(PRIORVALUE(EstadoObra__c),&apos;Cancelada&apos;),
OR(
ISPICKVAL(EstadoObra__c  , &apos;Ejecutada&apos;)
))</errorConditionFormula>
    <errorDisplayField>EstadoObra__c</errorDisplayField>
    <errorMessage>No puedes moverte a ese estado.</errorMessage>
</ValidationRule>