force-app/main/default/objects/Obra__c/validationRules/EstadoInvalidoDeteccion.validationRule-meta.xml
<ValidationRule>
    <fullName>EstadoInvalidoDeteccion</fullName>
    <active>false</active>
    <description>Regla de validación que impide el cambio de estado inválido para el valor Levantamiento/Validación.</description>
    <errorConditionFormula>AND(
ISPICKVAL(PRIORVALUE(EstadoObra__c),&apos;Detección&apos;),
OR(
ISPICKVAL(EstadoObra__c  , &apos;Levantamiento / Validación de Información&apos;),
ISPICKVAL(EstadoObra__c  , &apos;En Proceso&apos;),
ISPICKVAL(EstadoObra__c  , &apos;Ejecutada&apos;)
))</errorConditionFormula>
    <errorDisplayField>EstadoObra__c</errorDisplayField>
    <errorMessage>No puedes moverte a ese estado.</errorMessage>
</ValidationRule>