force-app/main/default/objects/Obra__c/validationRules/EstadoInvalidoEstimacion.validationRule-meta.xml
<ValidationRule>
    <fullName>EstadoInvalidoEstimacion</fullName>
    <active>true</active>
    <description>Regla de validación que impide el cambio de estado inválido para el valor Estimación.</description>
    <errorConditionFormula>AND(
ISPICKVAL(PRIORVALUE(EstadoObra__c),&apos;Estimación&apos;),
OR(
ISPICKVAL(EstadoObra__c  , &apos;Levantamiento / Validación de Información&apos;),
ISPICKVAL(EstadoObra__c  , &apos;Ejecutada&apos;),
ISPICKVAL(EstadoObra__c  , &apos;Detección&apos;)
))</errorConditionFormula>
    <errorDisplayField>EstadoObra__c</errorDisplayField>
    <errorMessage>No puedes moverte a ese estado.</errorMessage>
</ValidationRule>