force-app/main/default/objects/Obra__c/validationRules/EstadoInvalidoLevantamientoValidacion.validationRule-meta.xml
<ValidationRule>
    <fullName>EstadoInvalidoLevantamientoValidacion</fullName>
    <active>true</active>
    <description>Regla de validación que impide el cambio de estado inválido para el valor Detección.</description>
    <errorConditionFormula>AND(
ISPICKVAL(PRIORVALUE(EstadoObra__c),&apos;Levantamiento / Validación de Información&apos;),
OR(
ISPICKVAL(EstadoObra__c  , &apos;Estimación&apos;),
ISPICKVAL(EstadoObra__c  , &apos;En Proceso&apos;),
ISPICKVAL(EstadoObra__c  , &apos;Ejecutada&apos;)
))</errorConditionFormula>
    <errorDisplayField>EstadoObra__c</errorDisplayField>
    <errorMessage>No puedes moverte a ese estado.</errorMessage>
</ValidationRule>