force-app/main/default/objects/Obra__c/validationRules/FechaInvalida.validationRule-meta.xml
<ValidationRule>
    <fullName>FechaInvalida</fullName>
    <active>true</active>
    <description>Debe ser mayor que la fecha de inicio.</description>
    <errorConditionFormula>FechaFin__c  &lt;   FechaInicio__c</errorConditionFormula>
    <errorMessage>La Fecha fin ingresada, debe ser mayor que la fecha de inicio.</errorMessage>
</ValidationRule>